*************************************************************************************************************
*************************************************************************************************************
                                     Translator CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 28-07-2006 added: new speed units
 - 28-07-2006 fixed: tab stop order when editing a string
 - 28-07-2006 added: Translator icon to Add/Remove Programs
 - 28-07-2006 added: menu item help that links to http://www.xbmc.xbox-scene.com/wiki/index.php?title=XBMC_Translator
 - 07-07-2006 changed: better searching of stings by whole word
 - 26-06-2006 changed: input focus is always set to the textbox in the find form
 - 24-06-2006 added: better error message for files with duplicate string id's
 - 24-06-2006 added: Tools/Validate to check if a language file is well formed
 - 21-06-2006 added: now more then one region can specified in the language settings
 - 21-06-2006 added: ability to add newline chars when editing a string
 - 21-06-2006 fixed: corrected parsing of newline chars
 - 21-06-2006 added: throwing an exception if file is not a language file
 - 21-06-2006 added: Revision comment is added to each file when converting from old to new format
 - 21-06-2006 changed: removed unneeded parameter from the Region.Save() function